--- a/chatsim/pom.xml
+++ b/chatsim/pom.xml
@@ -9,6 +9,19 @@
 
     <name>chatsim</name>
 
+    <repositories>
+        <repository>
+            <id>snapshots-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,7 +34,18 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+          <groupId>edu.cmu.sphinx</groupId>
+          <artifactId>sphinx4-core</artifactId>
+          <version>5prealpha-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+          <groupId>edu.cmu.sphinx</groupId>
+          <artifactId>sphinx4-data</artifactId>
+          <version>5prealpha-SNAPSHOT</version>
+        </dependency>        
     </dependencies>
+    
 
     <build>
         <plugins>
